Create tab to choose bike type

--- a/app/globals.css
+++ b/app/globals.css
@@ -216,4 +216,14 @@
 .search-manufacturer__option {
   @apply cursor-default select-none py-2 pl-10 pr-4;
 }
+
+/* Hide scrollbar for Webkit browsers */
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Opera */
+}
+
 /* END: search manufacturer styles */
