--- a/app/globals.css
+++ b/app/globals.css
@@ -54,6 +54,10 @@
   @apply xl:flex-[1.5] flex justify-end items-end w-full xl:h-screen;
 }
 
+.hero__image-container1 {
+  @apply xl:flex-[1.5] flex justify-start items-start w-full xl:h-screen;
+}
+
 .hero__image {
   @apply relative xl:w-full w-[90%] xl:h-full h-[590px] z-0;
 }
